5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1674_1880.log
== TEST (2019-04-27 13:42:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m=1):
		print("janeiro")
	if (m=2):
		print("fevereiro")
	if (m=3):
		print("marco")
	if (m=4):
		print("abril")
	if (m=5):
		print("maio")
	if (m=6):
		print("junho")
	if (m=7):
		print("julho")
	if (m=8):
		print("agosto")
	if (m=9):
		print("setembro")
	if (m=10):
		print("outubro")
	if (m=11):
		print("novembro")
	if (m=12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 4
    if (m=1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:42:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:42:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.1758
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:43:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:43:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:43:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:43:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:44:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:48:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:48:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:48:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:48:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:48:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:48:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:49:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:49:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.145367
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:49:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("numero: "))
if (1<= m <=12):
	if (m==1):
		print("janeiro")
	if (m==2):
		print("fevereiro")
	if (m==3):
		print("marco")
	if (m==4):
		print("abril")
	if (m==5):
		print("maio")
	if (m==6):
		print("junho")
	if (m==7):
		print("julho")
	if (m==8):
		print("agosto")
	if (m==9):
		print("setembro")
	if (m==10):
		print("outubro")
	if (m==11):
		print("novembro")
	if (m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.155148
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
